fix blogs gap for mobile

--- a/src/app/components/blog-area/blog-area.component.scss
+++ b/src/app/components/blog-area/blog-area.component.scss
@@ -20,12 +20,13 @@ h2 {
 .wrapper {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  grid-gap: 70px;
+  grid-gap: 20px;
   grid-auto-rows: auto;
   margin-top: 10px;
   margin-bottom: 40px;
   @include tablet-min-portrait {
     grid-template-columns: repeat(3, 1fr);
+    grid-gap: 70px;
     margin-top: 40px;
   }
 
